k8s/webservice/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-service
  namespace: tracing-service
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tracing-service
  template:
    metadata:
      labels:
        app: tracing-service
    spec:
      priorityClassName: core-services
      nodeSelector:
        chaimeleon.eu/target: core-services
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60

      securityContext:        
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000
        runAsNonRoot: true
      
      volumes:
        - name: tracing-service-config
          configMap:
            defaultMode: 440
            name: tracing-service-config
        - name: tracing-service-secrets
          secret:
            defaultMode: 440
            secretName: tracing-service-secrets
      containers:
        - name: webservice
          image: tracing-service:1.0.0-alpha
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tracing-service-config
              mountPath: /opt/tracing/settings.yml
              subPath: settings.yml
            - name: tracing-service-secrets
              mountPath: /opt/tracing/settings_secret.yml
              subPath: settings_secret.yml
          ports:
            - name: webservice
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: "1"
              memory: 2Gi
