k8s/webservice/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tracing-service
  namespace: tracing-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: api
  selector:
    app: tracing-service
